--- a/src/main/angular-media-app/src/app/auth/registration/registration.component.html
+++ b/src/main/angular-media-app/src/app/auth/registration/registration.component.html
@@ -23,6 +23,8 @@
                                 <div class="form-outline mb-4">
                                     <input name="email" type="email" id="label_email" class="form-control form-control-lg" [(ngModel)]="user.email"/>
                                     <label class="form-label" for="label_email">Your Email</label>
+                                    <br>
+                                    <label class="form-label text-danger" *ngIf="!validEmailAddress" for="label_email">This email has been already used.</label>
                                 </div>
 
                                 <div class="form-outline mb-4">
