--- a/src/main/angular-media-app/src/app/app.component.html
+++ b/src/main/angular-media-app/src/app/app.component.html
@@ -11,4 +11,22 @@
         </ul>
     </div>
 </nav>
+
 <router-outlet></router-outlet>
+
+<!-- Footer -->
+<footer class="bg-dark text-center text-white">
+    <!-- Grid container -->
+    <div class="container p-4">
+
+    </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+        © 2024 Copyright: MediaApp
+    </div>
+    <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
