MA-60 - Integrate Login frontend with backend

--- a/src/main/angular-media-app/src/app/auth/login/login.component.html
+++ b/src/main/angular-media-app/src/app/auth/login/login.component.html
@@ -22,10 +22,10 @@
 
                                 <div class="d-flex justify-content-center">
                                     <button type="button"
-                                        class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Submit</button>
+                                        class="btn btn-success btn-block btn-lg gradient-custom-4 text-body" (click)="loginUser()">Submit</button>
                                 </div>
 
-                                <p class="text-center text-muted mt-5 mb-0">Not a member? <a href="/register"
+                                <p class="text-center text-muted mt-5 mb-0">Not a member? <a href="/registration"
                                         class="fw-bold text-body"><u>Register here</u></a></p>
 
                             </form>
