MA-5 - Add background-color to bootstrap elements

--- a/src/main/angular-media-app/src/app/app.component.css
+++ b/src/main/angular-media-app/src/app/app.component.css
@@ -1,3 +1,19 @@
-footer{
+footer {
     margin-top: auto;
+}
+
+.container-fluid{
+    padding: auto;
+    margin: auto;
+    border: 1px solid red;
+    background-color: red;
+}
+
+.row{
+    background-color: yellow;
+}
+
+.col-12{
+    background-color: aqua;
+    border: 1px solid red;
 }
