--- a/src/main/angular-media-app/src/app/app.component.html
+++ b/src/main/angular-media-app/src/app/app.component.html
@@ -1,32 +1,47 @@
-<nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Media app</a>
-    <div class="navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" routerLink="/login">Login</a>
-            </li>
-            <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" routerLink="/registration">Registration</a>
-            </li>
-        </ul>
+<div class="container-fluid">
+
+    <div class="row">
+        <div class="col-12">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <a class="navbar-brand" href="#">Media app</a>
+                <div class="navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item" routerLinkActive="active">
+                            <a class="nav-link" routerLink="/login">Login</a>
+                        </li>
+                        <li class="nav-item" routerLinkActive="active">
+                            <a class="nav-link" routerLink="/registration">Registration</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </div>
-</nav>
 
-<router-outlet></router-outlet>
-
-<!-- Footer -->
-<footer class="bg-dark text-center text-white">
-    <!-- Grid container -->
-    <div class="container p-4">
-
+    <div class="row">
+        <div class="col-12">
+            <router-outlet></router-outlet>
+        </div>
     </div>
-    <!-- Grid container -->
 
-    <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-        © 2024 Copyright: MediaApp
+    <div class="row">
+        <div class="col-12">
+            <!-- Footer -->
+        <footer class="bg-dark text-center text-white">
+            <!-- Grid container -->
+            <div class="container p-4">
+
+            </div>
+            <!-- Grid container -->
+
+            <!-- Copyright -->
+            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+                © 2024 Copyright: MediaApp
+            </div>
+            <!-- Copyright -->
+        </footer>
+        <!-- Footer -->
+        </div>
     </div>
-    <!-- Copyright -->
 
-</footer>
-<!-- Footer -->
+</div>
