--- a/src/main/angular-media-app/src/app/app.component.html
+++ b/src/main/angular-media-app/src/app/app.component.html
@@ -1,7 +1,7 @@
-<div class="container-fluid">
+<div>
 
-    <div class="row">
-        <div class="col-12">
+    <div class="row px-2">
+        <div class="col-12 px-0">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <a class="navbar-brand" href="#">Media app</a>
                 <div class="navbar-collapse" id="navbarNav">
@@ -19,13 +19,13 @@
     </div>
 
     <div class="row">
-        <div class="col-12">
+        <div class="col-12 px-0">
             <router-outlet></router-outlet>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-12">
+        <div class="col-12 px-0">
             <!-- Footer -->
         <footer class="bg-dark text-center text-white">
             <!-- Grid container -->
