--- a/src/main/angular-media-app/src/styles.css
+++ b/src/main/angular-media-app/src/styles.css
@@ -4,3 +4,22 @@ html, body {
     margin: auto;
     padding: 0;
 }
+.fillin{
+    padding-top: 90px;
+    padding-bottom: 90px;
+}
+
+.stretchedToMargin {
+    display: block;
+    position:absolute;
+    height:auto;
+    bottom:0;
+    top:0;
+    left:0;
+    right:0;
+    margin-top:20px;
+    margin-bottom:20px;
+    margin-right:80px;
+    margin-left:80px;
+    background-color: green;
+  }
