--- a/src/main/angular-media-app/src/app/app.component.html
+++ b/src/main/angular-media-app/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div>
+<div class="container-fluid">
 
-    <div class="row px-2">
-        <div class="col-12 px-0">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="row">
+        <div class="col-lg-12 px-0">
+            <nav class="mediapp-navbar navbar navbar-expand-sm navbar-dark bg-dark">
                 <a class="navbar-brand" href="#">Media app</a>
                 <div class="navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
@@ -19,29 +19,18 @@
     </div>
 
     <div class="row">
-        <div class="col-12 px-0">
+        <div class="col-lg-12 px-0">
             <router-outlet></router-outlet>
-        </div>
+        </div>        
     </div>
 
     <div class="row">
-        <div class="col-12 px-0">
-            <!-- Footer -->
-        <footer class="bg-dark text-center text-white">
-            <!-- Grid container -->
-            <div class="container p-4">
-
-            </div>
-            <!-- Grid container -->
-
-            <!-- Copyright -->
-            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-                © 2024 Copyright: MediaApp
-            </div>
-            <!-- Copyright -->
-        </footer>
-        <!-- Footer -->
+        <div class="col-lg-12 px-0">
+            <footer class="bg-dark text-center text-white">
+                <div class="mediapp-footer text-center" style="background-color: rgba(0, 0, 0, 0.2)">
+                    © 2024 Copyright: MediaApp
+                </div>
+            </footer>
         </div>
     </div>
-
 </div>
