--- a/src/main/angular-media-app/src/app/auth/registration/registration.component.css
+++ b/src/main/angular-media-app/src/app/auth/registration/registration.component.css
@@ -1,3 +1,14 @@
-section{
-    background-color: black;
+.mediapp-register{
+    height: 100%;
+    width: 100%;
+    background: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp') center/cover;
+}
+
+.register-flex-parent{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding: 20px 0px;
 }
