--- a/src/main/angular-media-app/src/app/auth/registration/registration.component.html
+++ b/src/main/angular-media-app/src/app/auth/registration/registration.component.html
@@ -1,51 +1,58 @@
-<section class="vh-100 bg-image"
-    style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
-    <div class="mask d-flex align-items-center h-100 gradient-custom-3">
-        <div class="container h-100">
-            <div class="row d-flex justify-content-center align-items-center h-100">
-                <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-                    <div class="card" style="border-radius: 15px;">
-                        <div class="card-body p-5">
-                            <h2 class="text-uppercase text-center mb-5">Create an account</h2>
+<div class="mediapp-register container-fluid">
+    <div class="mask gradient-custom-3">
+        <div class="register-flex-parent">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                        <div class="card" style="border-radius: 15px;">
+                            <div class="p-5">
+                                <h2 class="text-uppercase text-center mb-5">Create an account</h2>
 
-                            <form>
+                                <form>
 
-                                <div class="form-outline mb-4">
-                                    <input name="first_name" type="text" id="label_first_name" class="form-control form-control-lg" [(ngModel)]="user.firstName"/>
-                                    <label class="form-label" for="label_first_name">Your First Name</label>
-                                </div>
+                                    <div class="form-outline mb-4">
+                                        <input name="first_name" type="text" id="label_first_name"
+                                            class="form-control form-control-lg" [(ngModel)]="user.firstName" />
+                                        <label class="form-label" for="label_first_name">Your First Name</label>
+                                    </div>
 
-                                <div class="form-outline mb-4">
-                                    <input name="last_name" type="text" id="label_last_name" class="form-control form-control-lg" [(ngModel)]="user.lastName"/>
-                                    <label class="form-label" for="label_last_name">Your Last Name</label>
-                                </div>
+                                    <div class="form-outline mb-4">
+                                        <input name="last_name" type="text" id="label_last_name"
+                                            class="form-control form-control-lg" [(ngModel)]="user.lastName" />
+                                        <label class="form-label" for="label_last_name">Your Last Name</label>
+                                    </div>
 
-                                <div class="form-outline mb-4">
-                                    <input name="email" type="email" id="label_email" class="form-control form-control-lg" [(ngModel)]="user.email"/>
-                                    <label class="form-label" for="label_email">Your Email</label>
-                                    <br>
-                                    <label class="form-label text-danger" *ngIf="!validEmailAddress" for="label_email">This email has been already used.</label>
-                                </div>
+                                    <div class="form-outline mb-4">
+                                        <input name="email" type="email" id="label_email"
+                                            class="form-control form-control-lg" [(ngModel)]="user.email" />
+                                        <label class="form-label" for="label_email">Your Email</label>
+                                        <br>
+                                        <label class="form-label text-danger" *ngIf="!validEmailAddress"
+                                            for="label_email">This email has been already used.</label>
+                                    </div>
 
-                                <div class="form-outline mb-4">
-                                    <input name="password" type="password" id="label_password" class="form-control form-control-lg" [(ngModel)]="user.password"/>
-                                    <label class="form-label" for="label_password">Password</label>
-                                </div>
+                                    <div class="form-outline mb-4">
+                                        <input name="password" type="password" id="label_password"
+                                            class="form-control form-control-lg" [(ngModel)]="user.password" />
+                                        <label class="form-label" for="label_password">Password</label>
+                                    </div>
 
-                                <div class="d-flex justify-content-center">
-                                    <button type="button"
-                                        class="btn btn-success btn-block btn-lg gradient-custom-4 text-body" (click)="createUser()">Register</button>
-                                </div>
+                                    <div class="d-flex justify-content-center">
+                                        <button type="button"
+                                            class="btn btn-success btn-block btn-lg gradient-custom-4 text-body"
+                                            (click)="createUser()">Register</button>
+                                    </div>
 
-                                <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="/login"
-                                        class="fw-bold text-body"><u>Login here</u></a></p>
+                                    <p class="text-center text-muted mt-5 mb-0">Have already an account? <a
+                                            href="/login" class="fw-bold text-body"><u>Login here</u></a></p>
 
-                            </form>
+                                </form>
 
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</section>
+</div>
