--- a/src/main/angular-media-app/src/app/app.component.html
+++ b/src/main/angular-media-app/src/app/app.component.html
@@ -3,14 +3,24 @@
     <div class="row">
         <div class="col-lg-12 px-0">
             <nav class="mediapp-navbar navbar navbar-expand-sm navbar-dark bg-dark">
-                <a class="navbar-brand" href="#">Media app</a>
+                <a class="navbar-brand" href="/main">Media app</a>
                 <div class="navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item" routerLinkActive="active">
-                            <a class="nav-link" routerLink="/login">Login</a>
+                        <li *ngIf="!authService.isLoggedIn" class="nav-item" routerLinkActive="active">
+                            <a class="nav-link" routerLink="/auth/login">Login</a>
                         </li>
-                        <li class="nav-item" routerLinkActive="active">
-                            <a class="nav-link" routerLink="/registration">Registration</a>
+                        <li *ngIf="!authService.isLoggedIn" class="nav-item" routerLinkActive="active">
+                            <a class="nav-link" routerLink="/auth/registration">Registration</a>
+                        </li>
+                        <li *ngIf="authService.isLoggedIn" class="nav-item" routerLinkActive="active">
+                            <a class="nav-link" routerLink="/main">Main Page</a>
+                        </li>
+                        <li *ngIf="authService.isLoggedIn" class="nav-item">
+                            <button type="button"
+                                    (click)="userService.logout()"
+                                    class="btn btn-secondary btn-block btn-sm gradient-custom-4 text-body mt-1">
+                                    Logout
+                            </button>
                         </li>
                     </ul>
                 </div>
@@ -21,7 +31,7 @@
     <div class="row">
         <div class="col-lg-12 px-0">
             <router-outlet></router-outlet>
-        </div>        
+        </div>
     </div>
 
     <div class="row">
