--- a/src/main/angular-media-app/src/app/auth/login/login.component.html
+++ b/src/main/angular-media-app/src/app/auth/login/login.component.html
@@ -23,7 +23,7 @@
                                     <div class="d-flex justify-content-center">
                                         <button type="button"
                                             class="btn btn-success btn-block btn-lg gradient-custom-4 text-body"
-                                            (click)="loginUser()">Submit</button>
+                                            (click)="logInUser()">Submit</button>
                                     </div>
 
                                     <p class="text-center text-muted mt-5 mb-0">Not a member? <a href="/registration"
