--- a/src/main/angular-media-app/src/app/auth/registration/registration.component.css
+++ b/src/main/angular-media-app/src/app/auth/registration/registration.component.css
@@ -1,5 +1,5 @@
 .mediapp-register{
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp') center/cover;
 }
@@ -9,6 +9,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 100vh;
     padding: 20px 0px;
 }
