MA-16 - Fix navigation on Login and Registration

--- a/src/main/angular-media-app/src/app/auth/login/login.component.html
+++ b/src/main/angular-media-app/src/app/auth/login/login.component.html
@@ -26,7 +26,7 @@
                                             (click)="logInUser()">Submit</button>
                                     </div>
 
-                                    <p class="text-center text-muted mt-5 mb-0">Not a member? <a href="/registration"
+                                    <p class="text-center text-muted mt-5 mb-0">Not a member? <a href="/auth/registration"
                                             class="fw-bold text-body"><u>Register here</u></a></p>
                                 </form>
                             </div>
