MA-16 - Add layout to Main Page

--- a/src/main/angular-media-app/src/app/main-page/main-page.component.html
+++ b/src/main/angular-media-app/src/app/main-page/main-page.component.html
@@ -1,1 +1,46 @@
-<p>main-page works!</p>
+<div class="mediapp-viewport-w-h-full bimage container-fluid">
+    <div class="flex-parent-start">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12">
+                    <main class="bg-dark">
+                        <div class="posts">
+                            <article>
+                                <h1>First post</h1>
+                                <p>Hello, I'm new here!</p>
+                            </article>
+                            <article>
+                                <h1>Second post</h1>
+                                <p>Hello, I'm new here too!</p>
+                            </article>
+                            <article>
+                                <h1>Second post</h1>
+                                <p>Hello, I'm new here too!</p>
+                            </article>
+                            <article>
+                                <h1>Second post</h1>
+                                <p>Hello, I'm new here too!</p>
+                            </article>
+                            <article>
+                                <h1>Second post</h1>
+                                <p>Hello, I'm new here too!</p>
+                            </article>
+                            <article>
+                                <h1>Second post</h1>
+                                <p>Hello, I'm new here too!</p>
+                            </article>
+                            <article>
+                                <h1>Second post</h1>
+                                <p>Hello, I'm new here too!</p>
+                            </article>
+                            <article>
+                                <h1>Second post</h1>
+                                <p>Hello, I'm new here too!</p>
+                            </article>
+                        </div>
+                    </main>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
