--- a/src/main/angular-media-app/src/app/app.component.html
+++ b/src/main/angular-media-app/src/app/app.component.html
@@ -37,7 +37,7 @@
     <div class="row">
         <div class="col-lg-12 px-0">
             <footer class="bg-dark text-center text-white">
-                <div class="mediapp-footer text-center" style="background-color: rgba(0, 0, 0, 0.2)">
+                <div class="mediapp-footer text-center bg-dark">
                     © 2024 Copyright: MediaApp
                 </div>
             </footer>
