--- a/src/main/angular-media-app/src/app/auth/registration/registration.component.css
+++ b/src/main/angular-media-app/src/app/auth/registration/registration.component.css
@@ -1,14 +1,3 @@
-.mediapp-register{
-    height: 100vh;
-    width: 100%;
+.bimage{
     background: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp') center/cover;
-}
-
-.register-flex-parent{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    padding: 20px 0px;
 }
