--- a/src/main/angular-media-app/src/styles.css
+++ b/src/main/angular-media-app/src/styles.css
@@ -12,9 +12,11 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    height: 100%;
     padding: 20px 0px;
 }
 
 .mediapp-viewport-w-h-full{
+    height: 100%;
     width: 100%;
 }
