--- a/src/main/angular-media-app/src/styles.css
+++ b/src/main/angular-media-app/src/styles.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    padding: 20px 0px;
+    padding: 20px 0;
 }
 
 .flex-parent-start{
@@ -13,7 +13,7 @@
     justify-content: flex-start;
     align-items: center;
     height: 100%;
-    padding: 20px 0px;
+    padding: 20px 0;
 }
 
 .mediapp-viewport-w-h-full{
