--- a/src/main/angular-media-app/src/app/app.component.css
+++ b/src/main/angular-media-app/src/app/app.component.css
@@ -8,8 +8,21 @@
     }
 }
 
-.search-result {
+.search-results div:hover {
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.search-results {
   position: absolute;
+  z-index: 100;
+  background-color: white;
+  border: 1px solid black;
+  padding: 5px;
+  overflow: hidden;
   width: 100%;
-  z-index: 999;
+}
+
+.search-container {
+  position: relative;
 }
