--- a/src/main/angular-media-app/src/app/app.component.html
+++ b/src/main/angular-media-app/src/app/app.component.html
@@ -56,7 +56,7 @@
 
     <div class="row">
         <div class="col-lg-12 px-0">
-            <footer class="bg-dark text-center text-white">
+            <footer class="bg-dark text-center text-white pb-2">
                 <div class="mediapp-footer text-center bg-dark">
                     © 2024 Copyright: MediaApp
                 </div>
