--- a/src/main/angular-media-app/src/app/main-page/main-page.component.html
+++ b/src/main/angular-media-app/src/app/main-page/main-page.component.html
@@ -5,11 +5,11 @@
                 <div class="col-12">
                     <main class="bg-dark">
 
-                        <div class="row pb-3">
+                        <div *ngIf="!createFormButton" class="row pb-3">
                             <div class="mx-auto">
-                                <button class="btn btn-info" type="button"
-                                (click)="createForm()">+ Create new post</button>
-                              </div>
+                                <button class="btn btn-info" type="button" (click)="createForm()">+ Create new
+                                    post</button>
+                            </div>
                         </div>
 
                         <div *ngIf="createFormButton" id="create-form">
@@ -18,10 +18,33 @@
                                     <div class="row">
                                         <div class="col-12">
                                             <button class="btn btn-danger float-right" type="button"
-                                                    (click)="closeForm()">X</button>
+                                                (click)="closeForm()">X</button>
                                         </div>
                                     </div>
-                                    <p style="text-align:center;">hello</p>
+                                    <h2 style="text-align: center;"><u>New post</u></h2>
+
+                                    <form action="post" class="p-3">
+                                        <div class="form-group">
+                                            <label for="postText">Add text:</label>
+                                            <textarea class="form-control" id="postText" rows="3"></textarea>
+                                        </div>
+                                        <div class="input-group mb-3">
+                                            <div class="input-group-prepend">
+                                                <span class="input-group-text">Upload image</span>
+                                            </div>
+                                            <div class="custom-file">
+                                                <input type="file" class="custom-file-input" id="postImage">
+                                                <label class="custom-file-label" for="postImage">Choose
+                                                    file</label>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class=" col mx-auto">
+                                                <button class="block-button btn btn-info" type="button" (click)="sendForm()">Submit</button>
+                                            </div>
+                                        </div>
+                                    </form>
+
                                 </div>
                             </div>
                         </div>
