--- a/src/main/angular-media-app/src/app/main-page/main-page.component.html
+++ b/src/main/angular-media-app/src/app/main-page/main-page.component.html
@@ -2,7 +2,7 @@
     <div class="flex-parent-start">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-12">
+                <div class="col-12" id="main-page-col">
                     <main class="bg-dark">
 
                         <div *ngIf="!createFormButton" class="row pb-3">
@@ -40,7 +40,8 @@
                                         </div>
                                         <div class="row">
                                             <div class=" col mx-auto">
-                                                <button class="block-button btn btn-info" type="button" (click)="sendForm()">Submit</button>
+                                                <button class="block-button btn btn-info" type="button"
+                                                    (click)="sendForm()">Submit</button>
                                             </div>
                                         </div>
                                     </form>
@@ -52,9 +53,40 @@
 
                         <div class="posts">
                             <article>
-                                <h1>First post</h1>
-                                <p>Hello, I'm new here!</p>
+                                <div class="card">
+                                    <div class="card-body profile">
+                                        <img alt="profile picture"
+                                            title="Post's writer name"
+                                            src="https://www.bankrate.com/2019/03/22142110/How-to-trade-stocks.jpg?auto=webp&optimize=high&width=912">
+                                        <a href="google.hu">
+                                            <h5 class="card-title">Post writer's name</h5>
+                                        </a>
+                                    </div>
+                                    <div class="card-body">
+                                        <p class="card-text">Post's text</p>
+                                    </div>
+                                    <img *ngIf="true" class="card-img-bottom" title="Post's image"
+                                        src="https://www.bankrate.com/2019/03/22142110/How-to-trade-stocks.jpg?auto=webp&optimize=high&width=912"
+                                        alt="Card image cap">
+                                    <div class="count-section">
+                                        <i class="fa fa-thumbs-up pr-3"> 42</i>
+                                        <i class="fa fa-comment"> 24</i>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="row">
+                                            <div class="col-12 col-md-6 pb-2">
+                                                <button type="button" class="btn btn-dark block-button"><i
+                                                        class="fa fa-thumbs-o-up"></i> Like</button>
+                                            </div>
+                                            <div class="col-12 col-md-6">
+                                                <button type="button" class="btn btn-dark block-button"><i
+                                                        class="fa fa-comment-o"></i> Comment</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </article>
+
                             <article>
                                 <h1>Second post</h1>
                                 <p>Hello, I'm new here too!</p>
