--- a/src/main/angular-media-app/src/app/main-page/main-page.component.html
+++ b/src/main/angular-media-app/src/app/main-page/main-page.component.html
@@ -69,7 +69,7 @@
                                             <p class="card-text">{{post.text}}</p>
                                         </div>
                                         <img *ngIf="post.image != null" class="card-img-bottom" title="Post's image"
-                                            src="https://www.bankrate.com/2019/03/22142110/How-to-trade-stocks.jpg?auto=webp&optimize=high&width=912"
+                                            src="{{post.image}}"
                                             alt="Card image cap">
                                         <div class="count-section">
                                             <i class="fa fa-thumbs-up pr-3"> {{post.likes.length}}</i>
