--- a/src/main/angular-media-app/src/app/main-page/main-page.component.css
+++ b/src/main/angular-media-app/src/app/main-page/main-page.component.css
@@ -72,3 +72,21 @@ main{
     flex-direction: row;
     align-items: center;
 }
+
+@media only screen and (max-width: 1200px) {
+    #main-page-col{
+        max-width: 80%;
+    }
+}
+
+@media only screen and (max-width: 1000px) {
+    #main-page-col{
+        max-width: 90%;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    #main-page-col{
+        max-width: 100%;
+    }
+}
