Refactor friend-request and manage-friends

--- a/src/main/angular-media-app/src/app/manage-friends/manage-friends.component.html
+++ b/src/main/angular-media-app/src/app/manage-friends/manage-friends.component.html
@@ -8,7 +8,7 @@
                         <div class="posts" *ngIf="authService.isLoggedIn() && connections.length > 0">
                             <article *ngFor="let friend of connections" >
                                 {{friend.firstName}} {{friend.lastName}}
-                                <button (click)="friendService.deleteFriend(friend.email)">Delete</button>
+                                <button (click)="deleteFriend(friend.email)">Delete</button>
                             </article>
                         </div>
                     </main>
