Revert "Refactor friend-request and manage-friends"
This reverts commit e6e6253c8100eeac4c3b35e918ea0bda14cbf7c3.

--- a/src/main/angular-media-app/src/app/friend-request/friend-request.component.html
+++ b/src/main/angular-media-app/src/app/friend-request/friend-request.component.html
@@ -10,8 +10,8 @@
                                 {{
                                     request.senderName
                                 }}
-                                <button (click)="acceptRequest(request.receiverEmail)">Accept</button>
-                                <button (click)="rejectRequest(request.receiverEmail)">Reject</button>
+                                <button (click)="requestService.acceptRequest(request.receiverEmail)">Accept</button>
+                                <button (click)="requestService.rejectRequest(request.receiverEmail)">Reject</button>
                             </article>
                         </div>
                     </main>
