--- a/src/main/angular-media-app/src/app/main-page/main-page.component.html
+++ b/src/main/angular-media-app/src/app/main-page/main-page.component.html
@@ -77,7 +77,7 @@
                                         <div class="card-body">
                                             <div class="row">
                                                 <div class="col-12 col-md-6 pb-2">
-                                                    <button type="button" class="btn btn-dark block-button"><i
+                                                    <button type="button" class="btn btn-dark block-button" (click)="likePost()"><i
                                                             class="fa fa-thumbs-o-up"></i> Like</button>
                                                 </div>
                                                 <div class="col-12 col-md-6">
